--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
     <!-- Popup Modal (Initially Hidden) -->
     <div id="popup" class="hidden">
         <div class="popup-content">
-            <span class="close-button" onclick="closePopup()">&times;</span>
+            <!-- <span class="close-button" onclick="closePopup()">&times;</span> -->
+            <button class="close-button" onclick="closePopup()">✖</button>
             <h2 id="popupMessage"></h2>
             <p>My Lyngu you mean the world to me, and I can't wait to make more beautiful memories with you! 💕</p>
             <p>A magical candlelit dinner awaits for you tonight, my love. 🌹✨ <br>
