--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ We’ll make up for every missed moment — soon, together.
     <h1>I Believe I Can FLY 🕊️</h1>
     <p>Not only we will sing this together bacha but also we will make it happen.
     <br><br>
-    We’ll soar together, chasing dreams, hitting milestones, and building a life that’s ours in every sense. Not just professionally but also personally — by show up for each other, every single day. Growing 1% at a time — in our careers, in our hearts, in how we love, care, and become better for one another.
+    We’ll soar together, chasing dreams, hitting milestones, and building a life that’s ours in every sense. Not just professionally but also personally — by showing up for each other, every single day. Growing 1% at a time — in our careers, in our hearts, in how we love, care, and become better for one another.
     <br><br>
     We’ll collect memories like souvenirs — from the places we will explore, the things we will try, adding new adventures and experiences like our BALI trip. And when life gets heavy, we’ll lift each other. When one forgets how to fly, the other will remind them how.
     <br><br>
